classDiagram
    class Tenant {
        +Guid Id
        +string Name
        +string Slug
        +string ConnectionString
        +int RateLimitPerMinute
        +bool IsActive
        +DateTime CreatedAt
        +DateTime UpdatedAt
        +Create(name, slug, rateLimit, connStr) Tenant$
        +Update(name, rateLimit)
        +Deactivate()
        +Activate()
    }
    class RoutingRule {
        +Guid Id
        +Guid TenantId
        +string Name
        +string EventTypePattern
        +EventTypeMatchMode MatchMode
        +string ChannelsJson
        +int Priority
        +bool IsActive
        +Create(...) RoutingRule$
        +Update(...)
        +Matches(eventType) bool
    }
    class NotificationLog {
        +Guid Id
        +Guid TenantId
        +Guid? RuleId
        +string EventType
        +string ChannelType
        +DispatchStatus Status
        +string? ErrorMessage
        +string PayloadJson
        +DateTime CreatedAt
        +Create(...) NotificationLog$
    }
    class EventTypeMatchMode {
        <<enumeration>>
        Exact
        Prefix
        Contains
    }
    class DispatchStatus {
        <<enumeration>>
        Sent
        Failed
        RateLimited
    }
    class TenantNotFoundException { <<exception>> }
    class RoutingRuleNotFoundException { <<exception>> }
    class RateLimitExceededException { <<exception>> }
    class DuplicateTenantSlugException { <<exception>> }

    RoutingRule --> EventTypeMatchMode
    NotificationLog --> DispatchStatus
